<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/buying_bg"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_main_btn"      
        >
       <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyinglist"
            android:textSize="@dimen/buyinglist_text_size"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_30"
            />
       <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />
           <Button 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:background="@drawable/buying_edit_btn_bg"
               android:id="@+id/fragment_buyinglist_edit_btn"
               android:text="@string/edit"
               android:layout_marginRight="@dimen/margin_30"
               />         
    </LinearLayout>
    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buying_food_list_meals"
            android:textSize="@dimen/buyinglist_text_size"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_30"
            />
    <TextView 
        android:id="@+id/fragment_buyinglist_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buyinglist_text_size"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_30"
            />
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fragment_buyinglist_coursefood_lv"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:cacheColorHint="#00000000"
        />
</LinearLayout>
