<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_setcondition"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:orientation="vertical" >
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/setcondition_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/condition"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/activity_setcondition_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/button_state"
            android:text="@string/save"
            android:textSize="@dimen/save_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="就餐人数:"
            android:textColor="@android:color/black"
            android:textSize="@dimen/people_num_text" />


            <Button
                android:id="@+id/activity_setcondition_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/date_up_button" />

            <Button
                android:id="@+id/activity_setcondition_people_tv"
                android:layout_width="@dimen/people_num_text_width"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="@android:color/black"
                android:textSize="@dimen/people_num_text" />

            <Button
                android:id="@+id/activity_setcondition_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/date_next_button" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:background="@drawable/bg_wheel"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:background="@drawable/bg_setcondition"
                android:orientation="horizontal" >

                <com.syt.health.kitchen.widget.WheelView
                    android:id="@+id/activity_setcondition_type_wheel_view"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <com.syt.health.kitchen.widget.WheelView
                    android:id="@+id/activity_setcondition_condition_wheel_view"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_10"
            android:scaleType="center"
            android:src="@drawable/wheel_flow_bg" />
    </RelativeLayout>

    <Button
        android:id="@+id/activity_setcondition_add_course_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/button_state"
        android:text="@string/add"
        android:textSize="@dimen/add_text_size" />

    <ListView
        android:id="@+id/activity_setcondition_condition_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000"
        android:scrollbars="none" />

</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_setcondition_help_layout"
    />
</FrameLayout>